# SEODeploy

./: .gitignore  .prospector.yaml  404.html  CHANGELOG.md  Demo.ipynb  LICENSE.md  Notebook.ipynb  README.md  TODO.md  Untitled.ipynb  config-template.py  config.py  coverage.pytest  errors.out  exclusions.out  index.html  mkdocs.yml  noxfile.py  out.txt  output.csv  output.txt  path_samples.txt  prospector.out  pyproject.toml  requirements.txt  result.out  results.out  run.out  seodeploy_config.yaml  seotesting_config.bak1  seotesting_config.yaml  setup.cfg  setup.py  sitemap.xml  test.py
404/: index.html
about/: index.html
cktesting/: main.py
cktesting/lib/: contentking.py  exceptions.py  helpers.py  sampling.py
docs/: 404.md  about.md  index.md  todo.md
docs/modules/: contentking.md  creating.md  headless.md
jenkins/: Jenkinsfile
jenkins/scripts/: seo_test.sh
lib/: log_helper.py  sampling.py
modules/contentking/: index.html
modules/creating/: index.html
modules/headless/: index.html
search/: search_index.json
seotesting/: main.py  test.py
seotesting/lib/: __init__.py  cli.py  comparison.py  config.py  contentking.py  data.json  exceptions.py  helpers.py  logging.py  modules.py  sampling.py  strategies.py
seotesting/modules/content_king/: __init__.py  functions.py
src/seodeploy/: __init__.py  __main__.py  main.py
tests/: conftest.py  test_cli.py  test_comparison.py  test_config.py  test_helpers.py
tests/files/: example_render.json  sample_contentking_pages.json  seotesting_config.yaml  text_modules.py
todo/: index.html
(+39 files in other folders)
