[tool.poetry]
name = "seodeploy"
version = "0.1.0"
description = "Library to provide a flexible format to allow developers to incorporate SEO checks into development workflows"
authors = ["JR Oakes <jroakes@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jroakes/SEODeploy"
repository = "https://github.com/jroakes/SEODeploy"
keywords = ["SEO", "deploy", "sontinuous delivery", "testing"]

[tool.poetry.scripts]
seodeploy = "seodeploy.main:run"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"
numpy = "^1.18.4"
pandas = "^1.0.4"
tqdm = "^4.46.0"
parse_it = "^3.4.0"
bs4 = "^0.0.1"
lxml = "^4.5.1"
dictdiffer = "^0.8.1"
asyncio = "^3.4.3"
nest_asyncio = "^1.3.3"
pyppeteer = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
prospector = {extras = ["with_pyroma"], version = "^1.2.0"}
black = "^19.10b0"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["seodeploy"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

